local_files/hive-metastore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: hive-metastore
  name: hive-metastore
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: hive-metastore
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/spark-network: "true"
        io.kompose.service: hive-metastore
    spec:
      containers:
        - env:
            - name: METASTORE_DB_HOSTNAME
              value: mariadb
          image: bitsondatadev/hive-metastore:latest
          name: hive-metastore
          ports:
            - containerPort: 9083
          resources: {}
          volumeMounts:
            - mountPath: /opt/apache-hive-metastore-3.0.0-bin/conf/metastore-site.xml
              name: hive-metastore-claim0
              readOnly: true
      hostname: hive-metastore
      restartPolicy: Always
      volumes:
        - name: hive-metastore-claim0
          persistentVolumeClaim:
            claimName: hive-metastore-claim0
            readOnly: true
status: {}
