local_files/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka
  template:
    metadata:
      labels:
        io.kompose.network/spark-network: "true"
        io.kompose.service: kafka
    spec:
      containers:
        - env:
            - name: ALLOW_PLAINTEXT_LISTENER
              value: "yes"
            - name: KAFKA_BROKER_ID
              value: "1"
            - name: KAFKA_CFG_ADVERTISED_LISTENERS
              value: "CLIENT://localhost:9092,EXTERNAL://$(KAFKA_SERVICE_HOST):9093"
            - name: KAFKA_CFG_INTER_BROKER_LISTENER_NAME
              value: CLIENT
            - name: KAFKA_CFG_LISTENERS
              value: "CLIENT://:9092,EXTERNAL://:9093"
            - name: KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP
              value: "CLIENT:PLAINTEXT,EXTERNAL:PLAINTEXT"
            - name: KAFKA_CFG_ZOOKEEPER_CONNECT
              value: "$(ZOOKEEPER_SERVICE_HOST):$(ZOOKEEPER_SERVICE_PORT)" 
            - name: KAFKA_CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR
              value: "1"
            - name: KAFKA_CONNECT_CONFIG_STORAGE_TOPIC
              value: my_connect_configs
            - name: KAFKA_CONNECT_CONFLUENT_SUPPORT_METRICS_ENABLE
              value: "false"
            - name: KAFKA_CONNECT_INTERNAL_KEY_CONVERTER
              value: org.apache.kafka.connect.json.JsonConverter
            - name: KAFKA_CONNECT_INTERNAL_VALUE_CONVERTER
              value: org.apache.kafka.connect.json.JsonConverter
            - name: KAFKA_CONNECT_KEY_CONVERTER
              value: org.apache.kafka.connect.json.JsonConverter
            - name: KAFKA_CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR
              value: "1"
            - name: KAFKA_CONNECT_OFFSET_STORAGE_TOPIC
              value: my_connect_offsets
            - name: KAFKA_CONNECT_PLUGIN_PATH
              value: "/home/kafka/plugins"  # Certifique-se de que o caminho está correto
            - name: KAFKA_CONNECT_STATUS_STORAGE_REPLICATION_FACTOR
              value: "1"
            - name: KAFKA_CONNECT_STATUS_STORAGE_TOPIC
              value: my_connect_statuses
            - name: KAFKA_CONNECT_VALUE_CONVERTER
              value: org.apache.kafka.connect.json.JsonConverter
          image: bitnami/kafka:latest
          name: kafka
          ports:
            - containerPort: 9092  # Ajustado para corresponder à configuração de LISTENERS
            - containerPort: 9093  # Porta EXTERNAL
          resources: {}
      restartPolicy: Always
