local_files/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mariadb
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mariadb
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/spark-network: "true"
        io.kompose.service: mariadb
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: schema_registry
            - name: MYSQL_PASSWORD
              value: dbpassword
            - name: MYSQL_ROOT_PASSWORD
              value: root
            - name: MYSQL_USER
              value: dbuser
          image: mariadb:10.5.8
          name: mariadb
          ports:
            - containerPort: 3306
          resources: {}
      hostname: mariadb
      restartPolicy: Always
status: {}
