local_files/minio2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: minio2
  name: minio2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: minio2
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/spark-network: "true"
        io.kompose.service: minio2
    spec:
      containers:
        - args:
            - server
            - --console-address
            - :9001
            - http://minio{1...4}/data{1...2}
          image: quay.io/minio/minio:RELEASE.2023-12-20T01-00-02Z
          livenessProbe:
            exec:
              command:
                - mc
                - ready
                - local
            failureThreshold: 5
            periodSeconds: 5
            timeoutSeconds: 5
          name: minio2
          ports:
            - containerPort: 9000
            - containerPort: 9001
          resources: {}
          volumeMounts:
            - mountPath: /data1
              name: data2-1
            - mountPath: /data2
              name: data2-2
      hostname: minio2
      restartPolicy: Always
      volumes:
        - name: data2-1
          persistentVolumeClaim:
            claimName: data2-1
        - name: data2-2
          persistentVolumeClaim:
            claimName: data2-2
status: {}
