local_files/spark-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: spark-master
  name: spark-master
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spark-master
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/spark-network: "true"
        io.kompose.service: spark-master
    spec:
      containers:
        - env:
            - name: SPARK_MASTER_PORT
              value: "7077"
            - name: SPARK_MASTER_WEBUI_PORT
              value: "7070"
            - name: SPARK_MODE
              value: master
            - name: SPARK_RPC_AUTHENTICATION_ENABLED
              value: "no"
            - name: SPARK_RPC_ENCRYPTION_ENABLED
              value: "no"
          image: bitnami/spark:3.3
          name: spark-master
          ports:
            - containerPort: 7070
            - containerPort: 7077
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: spark-master-claim0
      restartPolicy: Always
      volumes:
        - name: spark-master-claim0
          persistentVolumeClaim:
            claimName: spark-master-claim0
status: {}
