local_files/spark-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: spark-worker
  name: spark-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spark-worker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/spark-network: "true"
        io.kompose.service: spark-worker
    spec:
      containers:
        - env:
            - name: SPARK_MASTER_URL
              value: spark-master:7077
            - name: SPARK_MODE
              value: worker
            - name: SPARK_RPC_AUTHENTICATION_ENABLED
              value: "no"
            - name: SPARK_RPC_ENCRYPTION_ENABLED
              value: "no"
            - name: SPARK_USER
              value: spark
            - name: SPARK_WORKER_CORES
              value: "3"
            - name: SPARK_WORKER_MEMORY
              value: 2g
            - name: SPARK_WORKER_PORT
              value: "7078"
            - name: SPARK_WORKER_WEBUI_PORT
              value: "7171"
          image: bitnami/spark:3.3
          name: spark-worker
          ports:
            - containerPort: 7171
          resources: {}
      hostname: spark
      restartPolicy: Always
status: {}
