local_files/trino-coordinator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: trino-coordinator
  name: trino-coordinator
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: trino-coordinator
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/spark-network: "true"
        io.kompose.service: trino-coordinator
    spec:
      containers:
        - env:
            - name: TRINO_ENVIRONMENT
              value: production
          image: trinodb/trino:latest
          name: trino
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /etc/trino
              name: trino-coordinator-claim0
      hostname: trino-coordinator
      restartPolicy: Always
      volumes:
        - name: trino-coordinator-claim0
          persistentVolumeClaim:
            claimName: trino-coordinator-claim0
status: {}
