local_files/x-minio-common-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: x-minio-common
  name: x-minio-common
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: x-minio-common
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/spark-network: "true"
        io.kompose.service: x-minio-common
    spec:
      containers:
        - args:
            - server
            - --console-address
            - :9001
            - http://minio{1...4}/data{1...2}
          image: quay.io/minio/minio:RELEASE.2023-12-20T01-00-02Z
          livenessProbe:
            exec:
              command:
                - mc
                - ready
                - local
            failureThreshold: 5
            periodSeconds: 5
            timeoutSeconds: 5
          name: x-minio-common
          ports:
            - containerPort: 9000
            - containerPort: 9001
          resources: {}
      restartPolicy: Always
status: {}
