local_files/spark-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: spark-master
  name: spark-master
spec:
  ports:
    - name: "7070"
      port: 7070
      targetPort: 7070
    - name: "7077"
      port: 7077
      targetPort: 7077
  selector:
    io.kompose.service: spark-master
status:
  loadBalancer: {}
