local_files/spark-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: spark-worker
  name: spark-worker
spec:
  ports:
    - name: "7171"
      port: 7171
      targetPort: 7171
  selector:
    io.kompose.service: spark-worker
status:
  loadBalancer: {}
