local_files/spark-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: spark-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/spark-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/spark-network: "true"
